# domanek_project_1

./: README.md  meson.build  meson_options.txt
doc/latex/: main.tex
examples/: example-configuration.toml  example-configuration2.toml
include/: leb128.h
src/: main.cpp
