option('cli11_include_dir', type : 'string', value : '/home/michael/', description : 'the dir containing CLI11.hpp')
option('json_include_dir', type : 'string', value : '/home/michael/', description : 'the include dir of json')
option('spdlog_include_dir', type : 'string', value : '/home/michael/spdlog/include/', description : 'the include dir of spdlog')
option('tabulate_include_dir', type : 'string', value : '/home/michael/', description : 'the dir containing tabulate.hpp')
option('toml_include_dir', type : 'string', value : '/home/michael/', description : 'the include dir of toml++')

